--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -192,8 +192,8 @@
                                         </td>*@
                                         <td>                                            
                                             <div class="form-group auto-complete">
-                                                <div class="input-group">
-                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" placeholder="Enter SKU to search" value="" data-table="Purchase_Invoice_Item" data-col="Quantity,SKU_Code" data-headernames="SKU Code" data-param="hdf_Purchase_Invoice_Id" data-field="Purchase_Invoice_Id" />
+                                                <div id="SKU_0" class="input-group">
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text lookup-text" id="textSKU_No_0" placeholder="Enter SKU to search" value="" data-table="Purchase_Invoice_Item" data-col="Quantity,SKU_Code" data-headernames="SKU Code" data-param="hdf_Purchase_Invoice_Id" data-field="Purchase_Invoice_Id" />
                                                     <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                                     <input type="hidden" id="hdnQuantity_0" value="" class="auto-complete-value" />
                                                     <input type="hidden" id="hdnSKU_No_0" value="" name="PurchaseReturn.PurchaseReturns[0].SKU_Code" class="auto-complete-label" onchange="javascript: Get_Purchase_Return_Items_By_SKU_Code(0);" />
