--- a/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Search.cshtml
@@ -54,6 +54,8 @@
 
                             <input type="hidden" id="hdnIs_View" value="" name="product_Dispatch.Is_View" />
 
+                            <input type="hidden" id="hdnDispatch_Id" value="" name="product_Dispatch.Dispatch_Id" />
+
                             <div class="col-md-2">
 
                                 <div class="input-group">
@@ -101,6 +103,7 @@
                                         <option>Pending</option>
                                         <option>Dispatch</option>
                                         <option>Partially Dispatch</option>
+                                        <option>Free Dispatch</option>
 
                                     </select>
 
