--- a/MyLeoRetailer/Views/PostLogin/Master/ProductWarehouse/_Warehouse_Notifiation.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductWarehouse/_Warehouse_Notifiation.cshtml
@@ -32,12 +32,13 @@
                     </div><div id="mCSB_2_scrollbar_vertical" class="mCSB_scrollTools mCSB_2_scrollbar mCS-light mCSB_scrollTools_vertical" style="display: none;"><div class="mCSB_draggerContainer"><div id="mCSB_2_dragger_vertical" class="mCSB_dragger" style="position: absolute; min-height: 30px; top: 0px; display: block; height: 162px; max-height: 190px;" oncontextmenu="return false;"><div class="mCSB_dragger_bar" style="line-height: 30px;"></div></div><div class="mCSB_draggerRail"></div></div></div>
                 </div>
             </div>
-        @if (Model.List_product_warehouse.Count > 0)
-        {
-            <div class="panel-footer text-center">
-                <a href="/PurchaseOrderRequest/Search">Create Purchase Order Request</a>
-            </div>
-        }
+       
         </div>
+    @*@if (Model.List_product_warehouse.Count > 0)
+    {
+        <div class="panel-footer text-center">
+            <a href="/PurchaseOrderRequest/Search">Create Purchase Order Request</a>
+        </div>
+    }*@
    
 </form>
