--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -23,11 +23,11 @@
             <li><a href="/Category/Index"><span class="fa fa-users"></span> Category Management</a></li>
             <li><a href="/Color/Index"><span class="fa fa-users"></span> Color Management</a></li>
             <li><a href="/Size/Index"><span class="fa fa-users"></span> Size Management</a></li>
-            <li><a href="/Product/Search"><span class="fa fa-users"></span> Product Management</a></li> 
+            <li><a href="/Product/Search"><span class="fa fa-users"></span> Product Management</a></li>
             <li><a href="/Tax/Index"><span class="fa fa-users"></span> Tax Management</a></li>
             <li><a href="/Customer/Search"><span class="fa fa-users"></span> Customer Management</a></li>
             <li><a href="/Vendor/Search"><span class="fa fa-users"></span> Vendor Management</a></li>
-            <li><a href="/VendorContact/Search"><span class="fa fa-users"></span> Vendor Contact Management</a></li>                     
+            <li><a href="/VendorContact/Search"><span class="fa fa-users"></span> Vendor Contact Management</a></li>
             @*<li><a href="/Replacement/Search"><span class="fa fa-users"></span> Replacement</a></li>*@ @*commented bya aditya as pre sanket instruction 26092016*@
         </ul>
     </li>
@@ -132,13 +132,13 @@
                 <img id="notification_Icon" alt="" role="presentation" width="30" height="30" style="margin-top:10px" src="../Images/notification.gif">*@
             @if (Cookies.Warehouse_Notification_Count > 0)
             {
-                
+
                 @*<a href="#"><img id="notification_Icon" alt="" role="presentation" width="18" height="18" src="../../Images/notification.gif"></a>*@
                 <a href="#" style="height:50px"><img id="notification_Icon" alt="" role="presentation" width="30" height="30" src="../../Images/notification.gif"></a>
             }
             else
             {
-                 @*<a href="#"><img id="notification_Icon" alt="" role="presentation" width="18" height="18" src="../../Images/notification.gif"></a>*@
+                @*<a href="#"><img id="notification_Icon" alt="" role="presentation" width="18" height="18" src="../../Images/notification.gif"></a>*@
                 <a href="#" style="height:50px"><img alt="" role="presentation" width="30" height="30" src="../../Images/notification.gif"></a>
             }
             @if (Cookies.Warehouse_Notification_Count > 0)
@@ -153,13 +153,16 @@
                     </div>
                 </div>
                 @*Added by vinod mane on 27/10/2016*@
-                <div class="panel-footer text-center">
-                    <a href="/PurchaseOrderRequest/Search">Create Purchase Order Request</a>
-                </div>
+                @if (Cookies.Warehouse_Notification_Count > 0)
+                {
+                    <div class="panel-footer text-center">
+                        <a href="/PurchaseOrderRequest/Search">Create Purchase Order Request</a>
+                    </div>
+                }
                 @*End*@
             </div>
 
-            
+
         </li>
        <!--Added by aditya[07102016] End-->
 
