Changes in Purchase Return Module

--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
@@ -18,7 +18,7 @@
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
         <div class="page-title">
-            @if (@Model.PurchaseOrder.PurchaseReport_Id == 1)
+            @if (@Model.PurchaseOrder.PurchaseReport_Id != 2)
             {
             <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Order Management</h2>
             }
