--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
@@ -14,14 +14,13 @@
 <!-- END BREADCRUMB -->
 <!-- START CONTENT FRAME -->
 <div class="content-frame">
-
+    <input type="hidden" id="hdnPurchaseReturnReport_Id" name="PurchaseReturn.PurchaseReturnReport_Id" value="@Model.PurchaseReturn.PurchaseReturnReport_Id" />
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
-        <input type="hidden" id="hdnPurchaseReturnReport_Id" value="@Model.PurchaseReturn.PurchaseReturnReport_Id" name="PurchaseReturn.PurchaseReturnReport_Id" />
         <div class="page-title">
             @if (@Model.PurchaseReturn.PurchaseReturnReport_Id != 2)
             {
-            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Return Management</h2>
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Return Management</h2>
             }
             else
             {
@@ -74,7 +73,7 @@
 
                             <div class="form-group auto-complete">
                                 <input type="hidden" id="hdf_temp" value="x" />
-                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Debit Note No.</span>
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Gr No.</span>
                                 <div class="input-group">
                                     <input type="text" class="form-control invoice-filter autocomplete-text" id="txtGR_No" placeholder="Enter GR no to search" value="" data-table="Purchase_Return" data-col=" Purchase_Return_Id,GR_No" data-headernames="Purchase Return" data-param="hdf_temp" data-field="Purchase_Return_Id" />
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
@@ -90,29 +89,25 @@
                             <input type="hidden" id="hdnPurchaseReturnReport_Id" value="@Model.PurchaseReturn.PurchaseReturnReport_Id" />
 
                             @if (@Model.PurchaseReturn.PurchaseReturnReport_Id != 2)
-                                {
+                            {
                                 <div class="btn-group">
                                     <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseReturn">Create</button>
                                     <button class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseReturn">View</button>
                                     <button type="button" class="btn btn-info active edit" disabled value="View" id="btnPrintPurchaseReturn">Print</button>
                                     <button role="button" type="button" disabled class="btn btn-warning active" value="Update" id="btnUpdatePurchaseReturn" data-toggle="modal" data-target="#div_Parent_Modal_Fade">Update GR No.</button>
                                 </div>
-                                }
-                                else
-                                {
+                            }
+                            else
+                            {
                                 <div class="btn-group">
                                     <button class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseReturn">View</button>
                                 </div>
-                                }
-
-                            </div>
+                            }
 
                         </div>
 
-                    @**@
+                    </div>
 
-
-                    @**@
 
                     @*<div class="col-md-8 divUpdateGRNo">
                             <div class="row">
@@ -141,7 +136,7 @@
 
 
 
-        @*<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">*@<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
+
         <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
 
         </div>
@@ -150,71 +145,71 @@
 
 
         </div>
+    </div>
+
+
+</div>
 
 
 
-
-        @*<div class="col-md-12" style="padding: 0px;" id="divTable">
-                <div class="row">
-                    <div class="table-responsive" style="width:100%; margin: 0px 0;">
-                        <table class="table table-bordered table-hover" id="tblPurchaseReturn">
-                            <thead>
-                                <tr>
-                                    <th></th>
-                                    <th>Debit Note No.</th>
-                                    <th>GR_No</th>
-                                    <th>Vendor</th>
-                                    <th>Invoice No.</th>
-                                    <th>Quantity</th>
-                                    <th>Amount</th>
-                                    <th>Transporter</th>
-                                    <th>Logistics Person</th>
-                                    <th>Lr No.</th>
-                                    <th>Return Date</th>
-                                </tr>
-                            </thead>
-                            <tbody></tbody>
-                        </table>
-                </div>
+@*<div class="col-md-12" style="padding: 0px;" id="divTable">
+        <div class="row">
+            <div class="table-responsive" style="width:100%; margin: 0px 0;">
+                <table class="table table-bordered table-hover" id="tblPurchaseReturn">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Debit Note No.</th>
+                            <th>GR_No</th>
+                            <th>Vendor</th>
+                            <th>Invoice No.</th>
+                            <th>Quantity</th>
+                            <th>Amount</th>
+                            <th>Transporter</th>
+                            <th>Logistics Person</th>
+                            <th>Lr No.</th>
+                            <th>Return Date</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+        </div>
+    </div>
+        </div>*@@*<div class="col-md-12" style="padding: 0px;" id="divTable">
+        <div class="row">
+            <div class="table-responsive" style="width:100%; margin: 0px 0;">
+                <table class="table table-bordered table-hover" id="tblPurchaseReturn">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
             </div>
-                </div>*@<div class="col-md-12" style="padding: 0px;" id="divTable">
-                <div class="row">
-                    <div class="table-responsive" style="width:100%; margin: 0px 0;">
-                        <table class="table table-bordered table-hover" id="tblPurchaseReturn">
-                            <thead>
-                                <tr>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody></tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-            @*<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
-
-                <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
-
-
-                </div>*@<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
+        </div>
+    </div>*@
+        @*<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
 
             <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
 
 
-            </div>
+            </div>*@
 
-        </div>
+        @*<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />*@
 
-    </div>
+        @*<div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">*@
 
-</div>
+
+        @*</div>*@
+
