--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/View_Purchase_Return_Details.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/View_Purchase_Return_Details.cshtml
@@ -79,7 +79,7 @@
         <div class="page-title">
             <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Return View</h2>
         </div>
-        @if (Model.PurchaseReturn.PurchaseReturnReport_Id == 1)
+        @if (Model.PurchaseReturn.PurchaseReturnReport_Id != 2)
         {
             <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseReturn", new { PurchaseReport_Id = 1 })'"><i class="fa fa-angle-double-left"></i> BACK</button>
         }
