--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -62,10 +62,10 @@
     <li class="xn-openable">
         <a href="#"><span class="fa fa-files-o"></span> <span class="xn-text">Reports</span></a>
         <ul class="animated zoomIn">
-            <li><a href="/SalesOrder/Report"><span class="fa fa-users"></span> Sales </a></li>
-            <li><a href="/Inventory/Search"><span class="fa fa-users"></span> Inventory </a></li>
+            <li><a href="/Inventory/Search"><span class="fa fa-users"></span> Inventory Report </a></li>
+            <li><a href="/SalesOrder/Report"><span class="fa fa-users"></span> Sales Invoice Report </a></li>          
             <li><a href="/SalesOrder/SalesSummaryReport"><span class="fa fa-users"></span> Sales Summary Report </a></li>
-            <li><a href="@Url.Action("Search", "PurchaseOrder", new { PurchaseReport_Id = 2})"><span class="fa fa-users"></span> Purchase Report</a></li>
+            <li><a href="@Url.Action("Search", "PurchaseOrder", new { PurchaseReport_Id = 2})"><span class="fa fa-users"></span> Purchase Order Report</a></li>
             <li><a href="@Url.Action("Search", "PurchaseReturn", new { PurchaseReport_Id = 2 })"><span class="fa fa-users"></span> Purchase Return Report </a></li>
         </ul>
     </li>
