--- a/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
@@ -46,6 +46,7 @@
                         <div class="col-md-4">
                             <div class="form-group auto-complete">
                                 <div class="input-group">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Article No.</span>
                                     <input type="text" class="form-control brand-filter autocomplete-text" name="Filter.Article_No" id="txtArticle_No" placeholder="Enter Product article no." data-table="Product" data-col="Product_Id,Article_No" data-headernames="Product">
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                     <input type="hidden" id="hdnProduct_Id" value="" name="Product.Product_Id" />
