--- a/MyLeoRetailer/Views/PostLogin/Master/Alteration/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Alteration/Index.cshtml
@@ -182,7 +182,7 @@
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSaveAlteration">Save</button>
 
-                    <button type="reset" class="btn btn-danger active">Reset</button>
+                    <button type="reset" class="btn btn-danger active" id="btnResetAlteration">Reset</button>
 
                 </div>
 
